--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,14 +11,16 @@
 
   <div id="quoteDisplay"></div>
 
+  <!-- Category Filter -->
   <select id="categoryFilter" onchange="filterQuotes()">
     <option value="all">All Categories</option>
+    <!-- dynamically added categories -->
   </select>
 
   <button id="newQuoteBtn" onclick="showRandomQuote()">Show New Quote</button>
 
   <h3>Add a New Quote</h3>
-  <!-- created dynamically by createAddQuoteForm() -->
+  <!-- form will be created dynamically -->
   <div id="addQuoteContainer"></div>
 
   <h3>Import/Export</h3>
@@ -28,3 +30,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
