--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dynamic Quote Generator</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
+
   <div id="quoteDisplay"></div>
 
+  <!-- Category Filter -->
   <select id="categoryFilter" onchange="filterQuotes()">
     <option value="all">All Categories</option>
-    <!-- categories will be added dynamically -->
+    <!-- dynamically added categories -->
   </select>
 
-  <button onclick="showRandomQuote()"> Show New Quote</button>
+  <button id="newQuoteBtn" onclick="showRandomQuote()">Show New Quote</button>
 
   <h3>Add a New Quote</h3>
-  <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-  <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-  <button onclick="createAddQuoteForm()"> Add Quote</button>
+  <!-- form will be created dynamically -->
+  <div id="addQuoteContainer"></div>
 
   <h3>Import/Export</h3>
   <button onclick="exportQuotes()">Export Quotes (JSON)</button>
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-
-  <h3>Server Sync</h3>
-  <button onclick="syncWithServer()"> Sync with Server</button>
-
-  <!-- Status area for notifications -->
-  <p id="statusMessage" style="color: green; font-weight: bold;"></p>
 
   <script src="script.js"></script>
 </body>
